# Computer-graphics

./: 2FELADAT_Ilonczai_András_SC8646.rar  README.md
GTK/: CMakeLists.txt  main.c
OpenGL/Computer graphics university project/: 1FELADAT_Ilonczai_András_SC8646.rar
